base/src/test/resources/failure/terck/non-term.aya.txt
In file $FILE:3:4 ->

  1 | open data Nat | zero | suc Nat
  2 | 
  3 | def non Nat : Nat
          ^-^

Error: The recursive definition `non` is not structurally recursive

1 error(s), 0 warning(s).
What are you doing?
